welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:13: error: type mismatch;
 found   : Unit
 required: Int
	}
        ^